@startuml
skinparam classAttributeIconSize 0

class Coordinates {
  - x : int
  - y : int
  + Coordinates(x : int, y : int)
  + getX() : int
  + getY() : int
  + distance(p : Coordinates) : double
  + translate(dx : int, dy : int) : void
  + scale(factor : int, sign : boolean) : void
  + display() : String
}

abstract class Shape {
  - position : Coordinates
  - sides : int
  + Shape(noOfSides : int, coord : Coordinates)
  + getCoordinates() : Coordinates
  + getSides() : int
  + setCoordinates(newCoord : Coordinates) : void
  + translate(dx : int, dy : int) : void
  + {abstract} scale(factor : int, sign : boolean) : void
  + {abstract} getArea() : double
  + {abstract} getPerimeter() : double
  + {abstract} display() : String
}

class Rectangle {
  - width : int
  - length : int
}

class Square {
  - side : int
}

class Circle {
  - radius : int
}

class Triangle {
  - vertex2 : Coordinates
  - vertex3 : Coordinates
}

class ShapeList {
  - listOfShapes : ArrayList<Shape>
  + addShape(s : Shape) : void
  + getShape(pos : int) : Shape
  + removeShape(pos : int) : Shape
  + area(pos : int) : double
  + perimeter(pos : int) : double
  + translateShapes(dx : int, dy : int) : void
  + scale(factor : int, sign : boolean) : void
  + getNumberOfShapes() : int
  + display() : String
}

class ShapeManagement {
  + main(args : String[]) : void
}

Shape <|-- Rectangle
Shape <|-- Square
Shape <|-- Circle
Shape <|-- Triangle

Shape *-- Coordinates : position
Triangle *-- Coordinates : vertex2
Triangle *-- Coordinates : vertex3
ShapeList o-- Shape
ShapeManagement ..> ShapeList
ShapeManagement ..> Shape

@enduml
